<resources>
    <string name="app_name">FinBall</string>
    <string name="revenue_category_salary">Заработная плата</string>
    <string name="revenue_category_sponsor">Спонсор</string>
    <string name="revenue_category_bribe">Взятка, откат</string>
    <string name="revenue_category_gift">Подарки</string>
    <string name="revenue_category_dividends">Дивиденды</string>
    <string name="revenue_category_investment">Инвестиционный доход</string>
    <string name="revenue_category_business">Бизнес</string>
    <string name="revenue_category_realty">Недвижимость</string>
    <string name="revenue_category_insurance">Страхование</string>
    <string name="revenue_category_securities_shares">Ценные бумаги, акции</string>
    <string name="revenue_category_credit_buts">Кредиты, займы</string>
    <string name="revenue_category_unpredictable">Непредвиденный доход</string>
    <string name="revenue_category_gov_benefit">Государственные пособия</string>
    <string name="costs_category_food">Питание</string>
    <string name="costs_category_communal_rent">Коммунальные услуги</string>
    <string name="costs_category__mob_internet_tv">Связь, интернет, ТВ</string>
    <string name="costs_category_clothing_shoes">Одежда, обувь</string>
    <string name="costs_category_transport">Транспорт</string>
    <string name="costs_category_fun">Развлечения</string>
    <string name="costs_category_rest">Отдых</string>
    <string name="costs_category_study">Обучение</string>
    <string name="costs_category_children">Дети</string>
    <string name="costs_category_parents">Родители</string>
    <string name="costs_category_beloved">Вторая половинка</string>
    <string name="costs_category_care_yourself">Уход за собой</string>
    <string name="costs_category_care_home">Уход за домом</string>
    <string name="costs_category_health_sport">Здороье, спорт</string>
    <string name="costs_category_gift">Подарки</string>
    <string name="costs_category_pets">Питомцы</string>
    <string name="costs_category_hobby">Хобби</string>
    <string name="costs_category_credit">Кредиты</string>
    <string name="costs_category_insurance">Страхование</string>
    <string name="costs_category_repair_furniture_machinery">Ремонт, мебель, техника</string>
    <string name="costs_category_investment">Инвестирование</string>
    <string name="costs_category_unpredictable">Непредвиденные расходы</string>
    <string name="error_message">Ошибка</string>
    <string name="revenue">Доходы</string>
    <string name="costs">Расходы</string>
    <string name="year">Год</string>
    <string name="money_box">Копилка</string>
    <string name="money_box_rules_title">Правила копилки</string>
    <string name="money_box_rules">
        \tПридумайте <b>место</b> (копилку, коробочку, носок, банку…) куда Вы будете <b>откладывать</b> деньги в теченни месяца и <b>не забирать</b> их до начала другого месяца, <b>не подсчитивая</b> их. \n
        \tВ <b>последний день месяца</b> подсчитайте все сохранение деньги и <b>введите их в поле ввода выше</b>. \n
        \t<b>ВНИМАНИЕ!</b> Ввод суммы в копилку будет доступен только в <b>последний день месяца!</b> Будьте внимательны! \n
        \tКороткие <b>правила</b> накопления денег в <b>копилке</b>: \n
        1. Откладывать <b>10%</b> от дохода \n
        2. Каждый день откладывайте в копилку деньги которые <b>не жалко</b> \n
        3. Если при покупке Вы получили <b>скидку</b> от продавца, отложите эти деньги \n
        4. <b>Не подсчитывать</b> отложенные деньги до конца месяца \n
        5. Откладывать <b>50%</b> от <b>непредвиденных</b> доходов \n
        6. <b>Налог</b> себе <b>5%</b> при расходах более <b>10$</b>
    </string>
    <string name="money_box_fin_independency_title">Расчет финансовой независимости</string>
    <string name="money_box_price_per_work_hour_title">Стоимость работы в час</string>
    <string-array name="quote">
        <item>Жизнь — игра, а деньги — способ вести счет.</item>
        <item>Деньги — это время.</item>
        <item>Нельзя купить счастье за деньги, но можно арендовать.</item>
        <item>Деньги не дают счастья, но каждый хочет убедиться в этом сам.</item>
        <item>Я знаю, нельзя иметь всего сразу, поэтому я начну с малого — с денег.</item>
        <item>Деньги насквозь пропитаны нашей кровью.</item>
        <item>Говорят, что деньги — корень всякого зла. То же самое можно сказать о безденежье.</item>
        <item>Единственное, что можно делать без денег, — это долги.</item>
        <item>Деньги всегда есть, только карманы меняются.</item>
        <item>Нельзя гоняться за деньгами — нужно идти им навстречу.</item>
        <item>Только деньги могут помочь нам забыть о том. что мы небогаты.</item>
        <item>Деньги – хороший слуга, но плохой хозяин.</item>
    </string-array>
    <string-array name="quote_author">
        <item>Тед Тёрнер</item>
        <item>Джордж Гиссинг</item>
        <item>Американское изречение</item>
        <item>Стефан Киселевский</item>
        <item>Януш Васильковский</item>
        <item>Сенека</item>
        <item>Сэмюэл Батлер</item>
        <item>Хайнц Шенк</item>
        <item>Гертруда Стайн</item>
        <item>Аристотель Онассис</item>
        <item>Филипп Бувар</item>
        <item>Ф. Бэкон</item>
    </string-array>
    <string name="setting_notifications">Уведомления</string>
    <string name="setting_notifications_sound">Звук уведомления</string>
    <string name="setting_import_data">Импортировать данные</string>
    <string name="setting_export_data">Экспортировать данные</string>
    <string name="setting_write_us">Напиши нам</string>
    <string name="setting_rate_app">Оцени приложение</string>
    <string name="setting_share_app">Поделись приложением</string>
    <string name="setting_about_app">О приложении</string>
    <string name="month_fragment_revenue_no_data">График доходов будет доступным через 7 дней</string>
    <string name="month_fragment_costs_no_data">График расходов будет доступным через 7 дней</string>
    <string name="settings_deposit_program">Депозитные программи</string>
    <string name="settings_events">Мероприятия</string>
    <string name="settings_subscription">Продлить подписку</string>
    <string name="settings_lock">Настройка блокировки</string>
    <string name="personal_evolution">Развитие личности</string>
    <string name="analytic">Аналитика</string>
    <string name="settings">Настройки</string>
    <string name="year_diagram_no_data">Годовой график будет доступным через 3 месяца</string>
    <string name="intro_mission_title">Миссия</string>
    <string name="intro_page_text_mission">Миссия нашего приложения научить Вас контролировать поток денег и удержать его в Вашем кошельке</string>
    <string name="intro_page_text_costs">Записивайте все Ваши расходы сразу же как Вы их сделали. Делите их по категориям</string>
    <string name="intro_page_text_revenue">Записивайте все Ваши доходы, и любые деньги которые к Вам пришли. Делите их по категориям. Создавайте подкатегории в разделе Инвестиции, Бизнес, Недвижиость, если у Вас есть несколько каналом прибыли в этих категориях</string>
    <string name="intro_page_text_analytic">Графики расходов, доходов помогут Вам посмотреть сколько Вы тратите каждый день. Годовой график покажет Ваш баланс за каждый месяц. Анализируйте сколько Вы тратите/зарабатываете по каждой категории</string>
    <string name="intro_page_text_fin_independency">Расчитивается исходя из суммы отложенной в копилку за последний месяц и процента дохода от этой суммы</string>
    <string name="privacy_policy_content">
        1. \tUsing the real application <b>Royalty - Likes boost</b> (hereinafter - the Application), you get the opportunity to:\n

        \t1.1. \tuse of services provided by the Application;\n

        \t1.2. \tthe purchase of electronic goods and / or services for further use within the Application;\n

        \t1.3. \tgetting help if you have problems. related to the use of the Application from the technical support of the Application;\n\n

        2. \tThe activities of this Application are aimed solely at ensuring the process of interaction between any interested parties (hereinafter referred to as Users) to receive “coins” (hereinafter referred to as the Currency) within the Application.\n\n

        3. \tThe application provides the Users with a number of the above functions and does not guarantee the speed and / or reliability of their execution.\n\n

        4. \tUse by Users of the Application means that the User agrees to the above terms and conditions of this User Agreement. and also with all changes and / or additions to it.\n\n

        5. \tThe Application reserves the right, at its discretion, to make any changes and / or additions to this User Agreement at any time without prior and / or subsequent notification to the User. The new edition of the User Agreement comes into force from the moment of its placement in the Appendix.\n\n

        6. \tIn case of disagreement of the User with any of the points of the User Agreement. The user should not use the application. When. if the Application has made any changes to the User Agreement with which the User does not agree, the latter must stop using the application.\n\n

        7. \tThis User Agreement is mandatory for all Users of the application.\n\n

        8. \tThe creators of the Application (hereinafter - <b>R.Y.L. - group</b>) DO NOT guarantee that the operation of the Application will be:\n\n

        \t8.1. \tmeet the expectations of the User;\n
        \t8.2. \tuninterrupted;\n
        \t8.3. \tfaultless;\n
        \t8.4. \tApplication services will always be available to users or will function stably;\n
        \t8.5. \tguaranteed to ensure the speed of data transmission and / or speed of the application, as well as ensure the absence of spelling errors and typos;\n\n

        9. \tFor its part, support for <b>Royalty - Likes boost</b> will make all possible efforts to ensure the above properties of the Application.\n\n

        10. \t<b>Royalty - Likes boost</b> are not liable, including, but not limited to, for any material or moral damages caused by the use or inability to use the Application by Users, as well as for any consequences of unauthorized / illegal access of third parties to data User authorization (username, password), computer or personal information of the latter.\n\n

        11. \tThe application is not a client for Instagram, <b>R.Y.L. - group</b> - a separate, unofficial development group, not part of Instagram, not cooperating with Instagram and not responsible for Instagram policies and actions.\n\n

        12. \tRecognition in accordance with the current legislation of any provision of this User Agreement invalid or not subject to execution does not entail the invalidity or impracticability of other provisions of the User Agreement.\n\n

        13. \tTo obtain objective and consistent information in the Appendix, the User agrees to provide true, accurate and complete information about himself on the issues. offered in the Feedback Forms, and keep this information up to date.\n\n

        14. \t<b>R.Y.L. - group</b> warns that in the case of exclusively automated processing of personal data, they are not responsible for the accuracy and reliability of the personal data entered by the User. as well as decisions made by the User and for the legal consequences arising in this connection.\n\n

        15. \t<b>R.Y.L. - group</b> reserves the right at any time to completely or partially restrict User access to the application services without giving a reason.\n\n

        16. \t<b>R.Y.L. - group</b> is not responsible for the actions of the user in the application and for their consequences.\n</string>
    <string name="private_policy_agreement">Я принимаю условия политики конфиденциальности</string>
    <string name="private_policy_get_started">Начать</string>
</resources>