<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/button_menu_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            />

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_menu_quote">

        <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart_menu_correlation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </RelativeLayout>

    <Button
            android:id="@+id/button_menu_analytic"
            android:text="@string/analytic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_menu_quote_author"
            />

    <Button
            android:id="@+id/button_menu_revenue"
            android:text="@string/revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/button_menu_analytic"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button_menu_costs"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/button_menu_costs"
            />

    <Button
            android:id="@+id/button_menu_costs"
            android:text="@string/costs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/button_menu_analytic"
            />

    <TextView
            android:id="@+id/text_view_menu_quote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/text_view_menu_quote_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_menu_quote"
            app:layout_constraintEnd_toEndOf="@+id/text_view_menu_quote"
            android:layout_marginEnd="8dp"
            />

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.3"/>

    <Button
            android:id="@+id/button_menu_deposit_program"
            android:text="@string/settings_deposit_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_menu_revenue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

    <Button
            android:id="@+id/button_menu_personal_evolution"
            android:text="@string/personal_evolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_menu_deposit_program"/>
</android.support.constraint.ConstraintLayout>