<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/scrollView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_test"
                    android:background="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                <TextView
                        android:id="@+id/text_view_money_box_investment_title"
                        android:text="@string/money_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="32sp"
                        android:textColor="#000000"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"/>

                <EditText
                        android:id="@+id/edit_text_money_box_investment_amount"
                        android:layout_width="wrap_content"
                        android:maxWidth="256dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"
                        android:textSize="32sp"
                        android:hint="0"
                        android:cursorVisible="false"
                        android:textColorHint="#000000"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_money_box_investment_title"/>

                <TextView
                        android:id="@+id/text_view_money_box_wait_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/text_view_money_box_investment_title"
                        app:layout_constraintBottom_toTopOf="@+id/edit_text_money_box_investment_amount"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                <Button
                        android:id="@+id/button_money_box_investment_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Save"
                        app:layout_constraintTop_toBottomOf="@+id/edit_text_money_box_investment_amount"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"/>

                <View
                        android:id="@+id/view_money_box_div"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="#e1e1e1"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintTop_toBottomOf="@+id/button_money_box_investment_save"
                        android:layout_marginTop="16dp"/>

                <TextView
                        android:id="@+id/text_view_money_box_investment_rules_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money_box_rules_title"
                        android:textSize="24sp"
                        app:layout_constraintTop_toBottomOf="@id/view_money_box_div"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                        android:id="@+id/button_money_box_rules_switch"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@android:drawable/arrow_down_float"
                        android:tint="#000000"
                        app:layout_constraintStart_toEndOf="@+id/text_view_money_box_investment_rules_title"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/text_view_money_box_investment_rules_title"
                        app:layout_constraintTop_toTopOf="@+id/text_view_money_box_investment_rules_title"
                        android:scaleType="fitCenter"/>

            </android.support.constraint.ConstraintLayout>

            <TextView
                    android:id="@+id/text_view_money_box_investment_rules"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:elevation="-10dp"
                    android:text="@string/money_box_rules"
                    android:textSize="18sp"
                    android:alpha="0"
                    app:layout_constraintTop_toBottomOf="@id/cl_test"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="16dp"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>